--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       <div>
         <ul class="hidden sm:flex gap-x-3.5">
           <li class="cursor-pointer">
-            <a href="internship-details.html">Internships</a>
+            <a href="internships.html">Internships</a>
           </li>
           <li class="cursor-pointer"><a href="overviews.html">Overviews</a></li>
           <li class="cursor-pointer">
