--- a/public/internships.html
+++ b/public/internships.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Internship Details</title>
+    <title>Internships</title>
     <link href="./style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -85,66 +85,51 @@
         </g>
       </svg>
     </div>
-    <div class="py-2.5 space-y-[34px] mx-[70px]">
-      <!-- return button -->
-      <div class="flex px-4 py-2 gap-2.5 text-primary">
-        <p>v</p>
-        <p>Back to internships</p>
-      </div>
-      <!-- header card -->
+
+    <div class="px-[70px] py-[80px] grid grid-cols-12 gap-[20px] w-full h-20">
       <div
-        class="p-10 space-y-[84px] drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] bg-white"
+        class="col-span-6 h-[684px] bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] p-5 flex flex-col gap-[13px]"
       >
-        <div class="flex gap-5">
-          <div
-            class="max-w-[77px] h-[77px] aspect-square bg-primary grid place-items-center rounded"
-          >
-            <p class="text-white text-[24px] font-semibold">NL</p>
-          </div>
-          <div class="flex flex-col gap-5">
-            <p class="text-h1 wrap-anywhere font-display">
-              Front-End Developer Intern - NovaTeck Labs
-            </p>
-            <p class="text-caption font-display">
-              A student-focused engineering team that builds modular web tools
-              for small businesses. You’d work on full-stack features
-              end-to-end—implementing React interfaces, designing MySQL schemas,
-              and integrating Java-based microservices into a unified workflow.
-            </p>
-          </div>
+        <!-- tag search bar -->
+        <div class="flex h-10 gap-5">
+          <input
+            type="text"
+            class="border rounded-[10px] w-full p-3"
+            placeholder="Search with tags"
+          />
+          <div class="h-10 w-10 bg-primary rounded cursor-pointer"></div>
         </div>
+        <!-- tag pills -->
         <div class="flex gap-2.5">
-          <div class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px]">
-            <p class="text-white font-sans font-semibold text-[12px]">
-              Full Stack
-            </p>
-          </div>
-          <div class="bg-[#986BD0] rounded-[20px] px-[22px] py-[9px]">
-            <p class="text-white font-sans font-semibold text-[12px]">React</p>
-          </div>
-          <div class="bg-[#57BA76] rounded-[20px] px-[22px] py-[9px]">
-            <p class="text-white font-sans font-semibold text-[12px]">MySQL</p>
-          </div>
-          <div class="bg-[#DFC844] rounded-[20px] px-[22px] py-[9px]">
-            <p class="text-white font-sans font-semibold text-[12px]">Java</p>
+          <div
+            class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px] text-white flex items-center"
+          >
+            <p class="font-sans font-semibold text-[12px]">Full Stack</p>
           </div>
         </div>
+        <!-- internships -->
+        <div class="flex flex-col gap-5"></div>
       </div>
-      <!-- details card -->
       <div
-        class="p-10 drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] bg-white space-y-[43px]"
+        class="col-span-6 h-[684px] bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] p-5 flex flex-col gap-[13px]"
       >
-        <div>
-          <p>Start Date</p>
-          <p>June 2025</p>
-          <p>Duration</p>
-          <p>3 Months (Jun-Aug 2025)</p>
-          <p>Work Type</p>
-          <p>Full-time / Remote</p>
-          <p>Apply By</p>
-          <p>May 10, 2025</p>
-        </div>
-        <div class="space-y-[27px]"></div>
+        <p>Name: Jordan Smith</p>
+
+        <p>Skills: React, Python, SQL, UI Design, Git</p>
+
+        <p>Interests: Web Development, Data Visualization</p>
+
+        <p>Preferred Internship Type: Front-End Developer</p>
+
+        <p>Availability: June–August 2025</p>
+
+        <p>Location Preference: Remote or Tunisie, Nabeul</p>
+
+        <p>Languages: English, Arabic</p>
+
+        <p>Portfolio: jordan-smith.dev</p>
+
+        <p>LinkedIn: linkedin.com/in/jordansmith</p>
       </div>
     </div>
   </body>
