--- a/public/FeedbackAnalytics.html
+++ b/public/FeedbackAnalytics.html
@@ -19,7 +19,7 @@
 
   <!-- ================= HEADER ================= -->
   <header class="header text-white">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
+    <div class=" mx-auto flex items-center justify-between px-6 py-4">
 
       <!-- Logo -->
       <div class="flex items-center gap-2 font-display text-xl">
@@ -39,7 +39,7 @@
   </header>
 
   <!-- ================= MAIN ================= -->
-  <main class="flex-1 max-w-6xl mx-auto px-6 py-10">
+  <main class="flex-1  px-6 py-10">
 
     <!-- Breadcrumb -->
     <a href="feedbackhistory.html" class="text-sm text-gray-600 hover:underline">&lt; Your previous Feedbacks</a>
