courses and stuff

--- a/public/internship-details.html
+++ b/public/internship-details.html
@@ -113,6 +113,7 @@
             </p>
           </div>
         </div>
+        <!-- pills -->
         <div class="flex gap-2.5">
           <div class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px]">
             <p class="text-white font-sans font-semibold text-[12px]">
@@ -134,17 +135,157 @@
       <div
         class="p-10 drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] bg-white space-y-[43px]"
       >
+        <!-- date time and type -->
         <div>
-          <p>Start Date</p>
+          <p class="text-neutraldark">Start Date</p>
           <p>June 2025</p>
-          <p>Duration</p>
+          <p>class="text-neutraldark"Duration</p>
           <p>3 Months (Jun-Aug 2025)</p>
-          <p>Work Type</p>
+          <p class="text-neutraldark">Work Type</p>
           <p>Full-time / Remote</p>
-          <p>Apply By</p>
+          <p class="text-neutraldark">Apply By</p>
           <p>May 10, 2025</p>
         </div>
-        <div class="space-y-[27px]"></div>
+        <!-- description -->
+        <div class="flex flex-col gap-[27px]">
+          <!-- title 1 -->
+          <div class="flex gap-[10px]">
+            <div class="w-[10px] bg-secondary"></div>
+            <p class="text-h2">About the Role</p>
+          </div>
+          <!-- detail 1 -->
+          <p class="px-5">
+            You'll join NovaTech's product team to develop user interfaces for
+            data-driven dashboards. Interns collaborate with designers and
+            back-end engineers to implement responsive layouts and reusable
+            components.
+          </p>
+          <!-- title 2 -->
+          <div class="flex gap-[10px]">
+            <div class="w-[10px] bg-secondary"></div>
+            <p class="text-h2">Responsibilities</p>
+          </div>
+          <!-- list 1 -->
+          <div class="flex flex-col gap-[10px]">
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7 aspect-square">
+                <img src="./assets/check.png" alt="" />
+              </div>
+              <p>Build and test UI components in React and TypeScript</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7 aspect-square">
+                <img src="./assets/check.png" alt="" />
+              </div>
+              <p>BIntegrate APIs using Axios</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7 aspect-square">
+                <img src="./assets/check.png" alt="" />
+              </div>
+              <p>Participate in weekly sprint reviews</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7 aspect-square">
+                <img src="./assets/check.png" alt="" />
+              </div>
+              <p>Maintain Git branches and documentation</p>
+            </div>
+          </div>
+          <!-- title 3 -->
+          <div class="flex gap-[10px]">
+            <div class="w-[10px] bg-secondary"></div>
+            <p class="text-h2">Requirements</p>
+          </div>
+          <!-- list 2 -->
+          <div class="flex flex-col gap-[10px]">
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Knowledge of HTML, CSS, JavaScript</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Familiarity with React and Git workflows</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Understanding of responsive design principles</p>
+            </div>
+          </div>
+          <!-- title 4 -->
+          <div class="flex gap-[10px]">
+            <div class="w-[10px] bg-secondary"></div>
+            <p class="text-h2">Preffered Skills</p>
+          </div>
+          <!-- list 3 -->
+          <div class="flex flex-col gap-[10px]">
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Experience with Figma or Adobe XD</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Basic understanding of REST APIs</p>
+            </div>
+            <div class="flex gap-[10px] px-[10px]">
+              <div class="w-7 h-7"><img src="./assets/check.png" alt="" /></div>
+              <p>Strong attention to UI/UX detail</p>
+            </div>
+          </div>
+          <!-- title 5 -->
+          <div class="flex gap-[10px]">
+            <div class="w-[10px] bg-secondary"></div>
+            <p class="text-h2">About NovaTech Labs</p>
+          </div>
+          <!-- detail 2 -->
+          <p class="px-5">
+            NovaTech Labs is a software startup focused on data visualization
+            tools for small businesses. Our mission is to make analytics
+            accessible and actionable.
+          </p>
+        </div>
+      </div>
+      <!-- buttons -->
+      <div class="flex justify-end gap-[10px]">
+        <a
+          href="training-path.html"
+          class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+        >
+          Train
+        </a>
+        <a
+          href=""
+          class="bg-primary text-white px-4 py-2 rounded cursor-pointer"
+        >
+          Apply
+        </a>
+      </div>
+
+      <!-- delay -->
+      <div class="flex">
+        <p class="mt-[70px] ml-auto">Application Deadline: May 10, 2025</p>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="h-[120px] bg-secondary text-white text-caption pt-[25px] px-10">
+      <div class="flex justify-between mb-5">
+        <p class="text-h2">InternEase</p>
+        <div class="flex">
+          <img src="assets/phone.png" alt="phone" />
+          <img src="assets/instagram.png" alt="instagram" />
+          <img src="assets/facebook.png" alt="facebook" />
+        </div>
+      </div>
+      <div class="flex justify-between">
+        <div class="flex gap-5">
+          <p>Privacy Policy</p>
+          <p>|</p>
+          <p>Our History</p>
+          <p>|</p>
+          <p>What We Do</p>
+        </div>
+        <p>2025 All rights reserved</p>
       </div>
     </div>
   </body>
