--- a/public/internships.html
+++ b/public/internships.html
@@ -86,7 +86,7 @@
       </svg>
     </div>
 
-    <div class="px-[70px] py-[80px] grid grid-cols-12 gap-[20px] w-full h-20">
+    <div class="px-[70px] py-[80px] grid grid-cols-12 gap-[20px] w-full">
       <div
         class="col-span-6 h-[684px] bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] p-5 flex flex-col gap-[13px]"
       >
@@ -108,8 +108,189 @@
           </div>
         </div>
         <!-- internships -->
-        <div class="flex flex-col gap-5"></div>
+        <div class="flex flex-col gap-5 overflow-y-auto">
+          <!-- company #1 -->
+          <div
+            class="flex flex-col gap-[14px] px-5 py-[18px] rounded bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] border-neutraldefault border"
+          >
+            <!-- title -->
+            <p class="text-body text-primary !font-semibold">NovaTech Labs</p>
+            <!-- description -->
+            <p>
+              A student-focused engineering team that builds modular web tools
+              for small businesses. You’d work on full-stack features
+              end-to-end—implementing React interfaces, designing MySQL schemas,
+              and integrating Java-based microservices into a unified workflow.
+            </p>
+            <!-- pills -->
+
+            <div class="flex gap-2.5">
+              <div class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Full Stack
+                </p>
+              </div>
+              <div class="bg-[#986BD0] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  React
+                </p>
+              </div>
+              <div class="bg-[#57BA76] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  MySQL
+                </p>
+              </div>
+              <div class="bg-[#DFC844] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Java
+                </p>
+              </div>
+            </div>
+
+            <!-- buttons -->
+            <div class="flex gap-[10px]">
+              <a
+                href="internship-details.html"
+                class="bg-primary text-white px-4 py-2 rounded cursor-pointer"
+              >
+                View Details
+              </a>
+
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                Train
+              </div>
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                View Feedback
+              </div>
+            </div>
+          </div>
+          <!-- company #2 -->
+          <div
+            class="flex flex-col gap-[14px] px-5 py-[18px] rounded bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] border-neutraldefault border"
+          >
+            <!-- title -->
+            <p class="text-body text-primary !font-semibold">
+              SkyBridge Systems
+            </p>
+            <!-- description -->
+            <p>
+              A cloud-platform startup where interns prototype dashboard
+              components, refine backend APIs, and contribute to deployment
+              pipelines supporting real-time analytics for universities.
+            </p>
+            <!-- pills -->
+
+            <div class="flex gap-2.5">
+              <div class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Full Stack
+                </p>
+              </div>
+              <div class="bg-[#DFC844] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Node.js
+                </p>
+              </div>
+              <div class="bg-[#986BD0] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  React
+                </p>
+              </div>
+              <div class="bg-[#57BA76] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  PostgreSQL
+                </p>
+              </div>
+            </div>
+
+            <!-- buttons -->
+            <div class="flex gap-[10px]">
+              <a
+                href="internship-details.html"
+                class="bg-primary text-white px-4 py-2 rounded cursor-pointer"
+              >
+                View Details
+              </a>
+
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                Train
+              </div>
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                View Feedback
+              </div>
+            </div>
+          </div>
+          <!-- company #3 -->
+          <div
+            class="flex flex-col gap-[14px] px-5 py-[18px] rounded bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] border-neutraldefault border"
+          >
+            <!-- title -->
+            <p class="text-body text-primary !font-semibold">
+              TechForge Interactive
+            </p>
+            <!-- description -->
+            <p>
+              A product studio specializing in lightweight productivity apps.
+              Interns collaborate on new UI flows, develop backend utilities,
+              and participate in code reviews with senior engineers.
+            </p>
+            <!-- pills -->
+
+            <div class="flex gap-2.5">
+              <div class="bg-[#DF447B] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Full Stack
+                </p>
+              </div>
+              <div class="bg-[#986BD0] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Vue.js
+                </p>
+              </div>
+              <div class="bg-[#DFC844] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  Python
+                </p>
+              </div>
+              <div class="bg-[#57BA76] rounded-[20px] px-[22px] py-[9px]">
+                <p class="text-white font-sans font-semibold text-[12px]">
+                  MongoDB
+                </p>
+              </div>
+            </div>
+
+            <!-- buttons -->
+            <div class="flex gap-[10px]">
+              <a
+                href="internship-details.html"
+                class="bg-primary text-white px-4 py-2 rounded cursor-pointer"
+              >
+                View Details
+              </a>
+
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                Train
+              </div>
+              <div
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                View Feedback
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- summary -->
       <div
         class="col-span-6 h-[684px] bg-white drop-shadow-[0px_4px_4px_rgba(0,0,0,0.25)] p-5 flex flex-col gap-[13px]"
       >
@@ -130,6 +311,28 @@
         <p>Portfolio: jordan-smith.dev</p>
 
         <p>LinkedIn: linkedin.com/in/jordansmith</p>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="h-[120px] bg-secondary text-white text-caption pt-[25px] px-10">
+      <div class="flex justify-between mb-5">
+        <p class="text-h2">InternEase</p>
+        <div class="flex">
+          <img src="assets/phone.png" alt="phone" />
+          <img src="assets/instagram.png" alt="instagram" />
+          <img src="assets/facebook.png" alt="facebook" />
+        </div>
+      </div>
+      <div class="flex justify-between">
+        <div class="flex gap-5">
+          <p>Privacy Policy</p>
+          <p>|</p>
+          <p>Our History</p>
+          <p>|</p>
+          <p>What We Do</p>
+        </div>
+        <p>2025 All rights reserved</p>
       </div>
     </div>
   </body>
