--- a/public/internships.html
+++ b/public/internships.html
@@ -41,7 +41,7 @@
           <li class="cursor-pointer underline">
             <a href="internships.html">Internships</a>
           </li>
-          <li class="cursor-pointer">Overviews</li>
+          <li class="cursor-pointer"><a href="overviews.html">Overviews</a></li>
           <li class="cursor-pointer">CV Builder</li>
           <li class="cursor-pointer">Dashboard</li>
         </ul>
