secondary button fix

--- a/public/internship-details.html
+++ b/public/internship-details.html
@@ -87,8 +87,8 @@
     </div>
     <div class="py-2.5 space-y-[34px] mx-[70px]">
       <!-- return button -->
-      <div class="flex px-4 py-2 gap-2.5 text-primary">
-        <p>v</p>
+      <div class="flex px-4 py-2 gap-2.5 text-primary cursor-pointer">
+        <img src="./assets/left-chervon.png" alt="" width="20px" />
         <p>Back to internships</p>
       </div>
       <!-- header card -->
