--- a/public/training-path.html
+++ b/public/training-path.html
@@ -89,7 +89,7 @@
     <div class="py-2.5 space-y-[34px] mx-[70px]">
       <!-- return button -->
       <div class="flex px-4 py-2 gap-2.5 text-primary">
-        <p>v</p>
+        <img src="./assets/left-chervon.png" alt="" width="20px" />
         <p>Back to internship details</p>
       </div>
       <!-- header card -->
