--- a/public/internships.html
+++ b/public/internships.html
@@ -42,8 +42,10 @@
             <a href="internships.html">Internships</a>
           </li>
           <li class="cursor-pointer"><a href="overviews.html">Overviews</a></li>
-          <li class="cursor-pointer">CV Builder</li>
-          <li class="cursor-pointer">Dashboard</li>
+          <li class="cursor-pointer">
+            <a href="CVBuilder.html">CV Builder</a>
+          </li>
+          <li class="cursor-pointer"><a href="dashboard.html">Dashboard</a></li>
         </ul>
       </div>
       <p class="underline cursor-pointer hidden sm:block">Sign out</p>
