--- a/public/CVBuilder.html
+++ b/public/CVBuilder.html
@@ -391,8 +391,7 @@
         <!-- ===== ACTIONS ===== -->
         <div class="form-actions">
           <button class="btn-outline">Back</button>
-          <button class="btn-primary">Next</button>
-        </div>
+<a href="FeedbackForm.html" class="btn-primary inline-block text-center">Next</a>        </div>
       </section>
     </div>
   </div>
