--- a/dashboard.html
+++ b/dashboard.html
@@ -18,7 +18,7 @@
 <header class="bg-[#0f2a44] text-white px-10 py-4 flex justify-between items-center">
   <div class="font-bold text-lg">InternEase</div>
   <nav class="space-x-6 text-sm">
-    <a href="#">Internships</a>
+    <a href="././public/index.html">Internships</a>
     <a href="#">Overview</a>
     <a href="#">CV Builder</a>
     <a href="dashboard.html" class="font-semibold underline">Dashboard</a>
