--- a/network.html
+++ b/network.html
@@ -141,7 +141,7 @@
             <p class="font-medium">Team building recent</p>
             <p class="text-xs opacity-80">Date · Place</p>
           </div>
-          <button class="px-2 py-2 bg-white text-[#143a63] rounded-l-xl hover:bg-gray-100">→</button>
+          <button class="px-2 py-2 bg-white text-[#143a63] rounded-l-xl hover:bg-gray-100" onclick="window.location.href='././src/eventDetail.html'">→</button>
           
         </div>
 
