--- a/public/feedbackhistory.html
+++ b/public/feedbackhistory.html
@@ -160,7 +160,12 @@
         </div>
 
         <!-- ACTION BUTTON -->
-        <div class="flex justify-end mt-8">
+        <div class="flex gap-4 justify-end mt-8">
+           <a href="FeedbackForm.html"
+                class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
+              >
+                Back
+      </a>
   <button class="btn-primary" onclick="window.location.href='FeedbackAnalytics.html'">
     View Analytics
   </button>
