--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
           <li class="cursor-pointer">
             <a href="CVBuilder.html">CV Builder</a>
           </li>
-          <li class="cursor-pointer"><a href="dashboard.html">Dashboard</a></li>
+          <li class="cursor-pointer"><a href=".././dashboard.html">Dashboard</a></li>
         </ul>
       </div>
       <p class="underline cursor-pointer hidden sm:block">Sign out</p>
