--- a/public/internships.html
+++ b/public/internships.html
@@ -163,11 +163,11 @@
               >
                 Train
               </div>
-              <div
+              <a href="feedbackForm.html"
                 class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
               >
                 View Feedback
-              </div>
+            </a>
             </div>
           </div>
           <!-- company #2 -->
