--- a/public/internships.html
+++ b/public/internships.html
@@ -163,7 +163,7 @@
               >
                 Train
               </div>
-              <a href="feedbackForm.html"
+              <a href="FeedbackForm.html"
                 class="text-primary bg-white border-primary border px-4 py-2 rounded cursor-pointer"
               >
                 View Feedback
